tests/compile_fail/should_panic_duplicate.rs
#[skuld::test]
#[should_panic]
#[should_panic]
fn duplicate_should_panic() {
    panic!("boom");
}

fn main() {}
