tests/compile_fail/should_panic_duplicate.stderr
error: duplicate #[should_panic] attribute
 --> tests/compile_fail/should_panic_duplicate.rs:3:1
  |
3 | #[should_panic]
  | ^^^^^^^^^^^^^^^
